--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="font-raleway">
-  <header>
+  <header id="head">
     <!-- nav bar -->
     <nav class="mx-auto">
       <div class="navbar bg-base-100">
@@ -55,7 +55,7 @@
                 Paribahan</span></h1>
             <p class="mb-5">Yes, you can run unit tests and view the results directly within the app. The integrated
               testing features allow for a streamlined .</p>
-            <button class="btn font-bold bg-[#1DD100]">Buy Tickets</button>
+            <a href="#sit-section" class="btn font-bold bg-[#1DD100]">Buy Tickets</a>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
   </header>
   <main>
     <!-- offers coupon -->
-    <section class="flex justify-between mb-16">
+    <section class="mx-auto flex justify-between mb-16">
       <div class="w-[573px] h-56 bg-[#FFBF0F] rounded-3xl px-12 flex justify-between">
         <div class="py-12">
           <h2 class="text-4xl font-black">15% OFF</h2>
@@ -92,13 +92,13 @@
       <button class="btn w-48 font-bold text-[#1DD100] border-[#1DD100]">See All Offers</button>
     </div>
     <!-- paribahan title section -->
-    <section class="text-center mb-12">
+    <section class="mx-auto text-center mb-12">
       <h3 class="text-4xl font-bold">P.H Paribahan</h3>
       <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow
         for a streamlined .</p>
     </section>
     <!-- fare section -->
-    <section class="flex gap-16">
+    <section class="mx-auto flex gap-16">
       <!-- route section -->
       <div>
         <div class="flex justify-between">
@@ -113,7 +113,7 @@
           </div>
           <div class="flex gap-2 px-5 py-4 justify-center items-center w-44 h-14 bg-[#1DD10026] rounded-xl">
             <img src="images/seat-green.png" alt="">
-            <p class="font-medium  text-[#1DD100]"><span>8</span> Seats left</p>
+            <p class="font-medium  text-[#1DD100]"><span id="seat-left">8</span> Seats left</p>
           </div>
         </div>
         <div class="flex justify-between mt-6 mb-6">
@@ -148,7 +148,7 @@
       </div>
     </section>
     <!-- sit section -->
-    <section class="flex gap-16">
+    <section id="sit-section" class="mx-auto flex gap-16">
       <div>
         <h3 class="text-2xl font-semibold mb-6">Select Your Seat</h3>
         <div>
@@ -164,22 +164,22 @@
           </div>
           <div class="grid grid-cols-2 gap-16">
             <div class="flex gap-8 mb-6">
-              <button class="sit btn w-28 h-14">A1</button>
-              <button class="sit btn w-28 h-14">A2</button>
+              <button id="A1" class="sit btn w-28 h-14">A1</button>
+              <button id="A2" class="sit btn w-28 h-14">A2</button>
             </div>
             <div class="flex gap-8 mb-6">
-              <button class="sit btn w-28 h-14">A3</button>
-              <button class="sit btn w-28 h-14">A4</button>
+              <button id="A3" class="sit btn w-28 h-14">A3</button>
+              <button id="A4" class="sit btn w-28 h-14">A4</button>
             </div>
           </div>
           <div class="grid grid-cols-2 gap-16">
             <div class="flex gap-8 mb-6">
-              <button class="sit btn w-28 h-14">B1</button>
-              <button class="sit btn w-28 h-14">B2</button>
+              <button id="B1" class="sit btn w-28 h-14">B1</button>
+              <button id="B2" class="sit btn w-28 h-14">B2</button>
             </div>
             <div class="flex gap-8 mb-6">
-              <button class="sit btn w-28 h-14">B3</button>
-              <button class="sit btn w-28 h-14">B4</button>
+              <button id="B3" class="sit btn w-28 h-14">B3</button>
+              <button id="B4" class="sit btn w-28 h-14">B4</button>
             </div>
           </div>
         </div>
@@ -193,18 +193,39 @@
           </div>
           <hr>
           <div class="flex justify-between mt-6 mb-6">
-            <div id="seat-select"></div>           
-            <div id="price"></div>           
+            <div id="seat-select"></div>
+            <div id="price"></div>
           </div>
           <div class="flex justify-between mt-6 mb-6">
             <p>Total Price</p>
             <p id="total-price">0</p>
           </div>
-          <button class="btn w-[433px] h-16 text-white bg-[#1DD100]">Next</button>
+          <a href="#my_modal_8" class="btn w-[433px] h-16 text-white bg-[#1DD100]">Next</a>
+        </div>
+      </div>
+    </section>
+    <!-- next button page -->
+    <section class="mx-auto">
+      <div>
+        <!-- The button to open modal -->
+        
+        <!-- Put this part before </body> tag -->
+        <div class="modal" role="dialog" id="my_modal_8">          
+          <div class="modal-box w-[718px] flex flex-col justify-center items-center">
+            <img src="images/success.png" alt="">
+            <h3 class="font-bold text-lg text-[#27AE60]">SUCCESS</h3>
+            <p class="py-4 font-medium">Thank you for Booking Our Bus Seats. 
+              We are working hard to find the best service and deals for you. 
+              Shortly you will find a confirmation in your email.</p>
+            <div class="modal-action">
+              <a href="index.html" class="btn w-[300px] bg-[#27AE60] rounded-full">Continue</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
   </main>
+  <script src="JS/utility.js"></script>
   <script src="JS/index.js"></script>
 </body>
 
